- move font metrics to own file (fontutils) - remove axisid from virtualization - add font as prop insted of css (measurement consistancy) - bugfix with scrollbar - hiding in main hookcaused flicker

--- a/src/components/PositionalAxis.scss
+++ b/src/components/PositionalAxis.scss
@@ -1,8 +1,6 @@
 /** PositionalAxis.scss */
 
 .av2-positional-axis {
-  font-family: Monaco, Menlo, "Ubuntu Mono", Consolas, source-code-pro,
-    monospace;
   white-space: nowrap;
 
   overflow-x: hidden;
